lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:35: error: not found: type Segment
def getLandingZone():Segment = {
                     ^Lander:46: error: not found: value Segment
			return Segment(premier,deuxieme)
                               ^Lander:49: error: not found: value Segment
	return Segment(premier,deuxieme)
               ^